# comic-backend

./: .gitignore  Cargo.toml
src/: main.rs
src/db/: db.rs
src/models/: mod.rs  response.rs
src/models/authors/: authors.rs  mod.rs  response.rs
src/models/categories/: categories.rs  mod.rs  response.rs
src/models/chapters/: chapters.rs  mod.rs  response.rs
src/models/stories/: mod.rs  payload.rs  response.rs  stories.rs
src/models/top_story/: mod.rs  top_story.rs
src/repositories/: mod.rs
src/repositories/authors_repository/: authors_repository.rs  mod.rs  routes.rs
src/repositories/categories_repository/: categories_repository.rs  mod.rs  routes.rs
src/repositories/chapters_repository/: chapters_repository.rs  mod.rs  routes.rs
src/repositories/stories_repository/: mod.rs  routes.rs  stories_repository.rs
src/repositories/top_story_repository/: mod.rs  routes.rs  top_story_repository.rs
src/utils/: helpers.rs
