[package]
name = "comic"
version = "0.1.0"
authors = ["TriLy <lmtkg1992@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
mongodb = "1.1.1"
bson = "1.2.2"
lazy_static = "1.4.0"
serde = "1.0.105"
serde_json = "1.0.48"
serde_derive = "1.0.125"
jsonwebtoken = "7.1.0"
envfile = "0.2.1"
chrono = "0.4.11"
rust-crypto = "0.2.36"
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "0.3.4"
actix-cors = "0.5.4"
urlencoding = "1.1.1"
actix-form-data = "0.5.0"
form-data = "0.0.6"
mime = "0.3.14"
failure = "0.1.5"
bytes = "0.5.6"
tree_magic = "0.2.3"
actix-files = "0.5.0"
lettre = "0.10.0-rc.1"
slugify = "0.1.0"
